更新多个游戏的默认投注金额计算逻辑，优先使用游戏运行数据中的总投注金额